# flutter-payment-app

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
example/: usage_examples.dart
flutter_payment_app/: README.md  pubspec.yaml
flutter_payment_app/android/app/: build.gradle.kts
flutter_payment_app/lib/: main.dart  rust_gateway.dart
flutter_payment_app/linux/: CMakeLists.txt
flutter_payment_app/linux/runner/: my_application.cc
flutter_payment_app/rust_payment_engine/: Cargo.toml
flutter_payment_app/rust_payment_engine/src/: lib.rs
flutter_payment_app/test/: widget_test.dart
flutter_payment_app/web/: index.html
flutter_payment_app/windows/runner/: Runner.rc
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  rust_gateway.dart
lib/bridge_generated.dart/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/bridge_generated.dart/state_machine/: types.dart
lib/bridge_generated.dart/state_machine/states/: awaiting_info.dart
lib/src/app/: app.dart  payment_app.dart
lib/src/rust_gateway/: ffi_bindings.dart  models.dart  payment_gateway.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust_payment_engine/: Cargo.toml  flutter_rust_bridge.yaml
rust_payment_engine/src/: api.rs  frb_generated.rs  lib.rs
rust_payment_engine/src/state_machine/: api.rs  mod.rs  registry.rs  state_manager.rs  state_manager_tests.rs  state_trait.rs  types.rs
rust_payment_engine/src/state_machine/states/: awaiting_info.rs  emv_payment.rs  mod.rs  payment_success.rs
test/: widget_test.dart
(+16 files in other folders)
