[package]
name = "rust_payment_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_payment_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
rand = "0.8"
once_cell = "1.19"
futures = "0.3"
async-stream = "0.3"
